samples/_failures_safe/1761517101_a2ed4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0982723d.c: In function ‘main’:
./samples/SAFE/__tmp_0982723d.c:146:16: error: missing terminating " character
  146 |         printf("
      |                ^
./samples/SAFE/__tmp_0982723d.c:146:9: error: expected expression at end of input
  146 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_0982723d.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0982723d.c:146:9: error: expected declaration or statement at end of input
